Fixes for automated testing